force-app/main/default/objects/ccrz__E_ProductSpecIndex__c/ccrz__E_ProductSpecIndex__c.object-meta.xml
<CustomObject>
    <label>CC Product Spec Index</label>
    <nameField>
        <label>Product Spec Index</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Product Spec Indicies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>