force-app/main/default/objects/ccrz__E_ProductSpecIndex__c/fields/ccrz__ProductSpecIndexId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductSpecIndexId__c</fullName>
    <externalId>true</externalId>
    <label>ProductSpecIndexId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>