force-app/main/default/objects/ccrz__E_ProductSpecIndex__c/fields/ccrz__SpecValue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SpecValue__c</fullName>
    <label>SpecValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>